Addressing UX regression on Win10 FRE, and changing timeout behavior to assume Chrome is not pinned to taskbar.

BUG=694118, 695614, 687042
CQ_INCLUDE_TRYBOTS=master.tryserver.chromium.linux:closure_compilation

Review-Url: https://codereview.chromium.org/2722683002
Cr-Commit-Position: refs/heads/master@{#453484}

Former-commit-id: 2f2a6b849bcee8b531b45effa22de6ed03dc33d7